applications/tweetstream/kubernetes/ingress/tweetstream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweetstream-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: tweetstream.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tweetstream-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tweetstream-frontend
            port:
              number: 80
